--- a/CSS/Navbar.css
+++ b/CSS/Navbar.css
@@ -4,10 +4,10 @@
     justify-content: space-between;
     align-items: center;
     background: linear-gradient(180deg, #1F4E79 0%, #729ec7 100%);
-    backdrop-filter: blur(15px); /* Stronger blur for glass effect */
-    -webkit-backdrop-filter: blur(15px); /* Safari support */
-    box-shadow: inset 0 1px 1px rgba(255, 255, 255, 0.3), /* Inner highlight */
-                0 4px 6px rgba(0, 0, 0, 0.2); /* Outer shadow for depth */
+    backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(15px);
+    box-shadow: inset 0 1px 1px rgba(255, 255, 255, 0.3),
+        0 4px 6px rgba(0, 0, 0, 0.2);
     width: 100%;
     height: 11%;
     top: 4%;
@@ -19,7 +19,7 @@
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
 
-/* Slight reflection effect */
+
 .navbar::after {
     content: "";
     position: absolute;
@@ -35,14 +35,16 @@
     font-size: 30px;
     font-weight: bold;
     padding-left: 4%;
+    font-weight: 1000;
 }
 
 .nav-links {
-    font-size: 40px;
+    font-size: 60px;
     list-style: none;
     display: flex;
-    gap: 20px;
-    padding-right: 2%;
+    gap: 25px;
+    padding-right: 5%;
+    margin-bottom: 6.5%;
 }
 
 .nav-links li {
