--- a/CSS/Home-Page.css
+++ b/CSS/Home-Page.css
@@ -1,9 +1,9 @@
 /* === Color Palette ===
-   Sky Blue: #CBD9E6
-   Navy: #2F4156
+   Sky Blu156
    Teal: #567C8D
    White: #FFFFFF
-   Beige: #F5EFEB
+   Beige: #F5EFEBe: #CBD9E6
+   Navy: #2F4
 */
 
 body {
@@ -35,7 +35,7 @@ body {
 }
 
 .Stethoscope {
-    margin-top: 7%;
+    margin-top: 5%;
     width: 580px;
     height: auto;
     transform: rotate(45deg);
@@ -45,7 +45,7 @@ body {
     font-size: 52px;
     max-width: 800px;
     color: #2F4156;
-    margin-bottom: -5px;
+    margin-bottom: 7px;
     font-family: 'Trebuchet MS', sans-serif;
 }
 
@@ -55,11 +55,13 @@ body {
     margin-left: 6%;
     color: #567C8D;
     font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: 2%;
 }
 
 button {
     padding: 10px 15px;
-    margin-left: 30%;
+    margin-left: 38%;
+    margin-bottom: 10%;
     border-radius: 50px;
     border: none;
     color: white;
