--- a/CSS/Booking-Appointment-Page.css
+++ b/CSS/Booking-Appointment-Page.css
@@ -679,16 +679,18 @@
   height: 100%;
   overflow: auto;
   background-color: rgba(0,0,0,0.5);
+  backdrop-filter: blur(3px);
   font-family: Arial, sans-serif;
 }
 
 .modal-content {
-  background-color: #fff;
+  background-color: #a3b8c3;
   margin: 15% auto;
-  padding: 20px 30px;
+  padding: 30px 30px;
   border-radius: 8px;
-  width: 90%;
-  max-width: 400px;
+  width: 100%;
+  max-width: 600px;
+  height: 100px;
   text-align: center;
   box-shadow: 0 0 15px rgba(0,0,0,0.3);
   font-size: 1.1rem;
@@ -805,6 +807,21 @@ footer {
     }
   }
 
+/*Validation Message For Personal Info*/
+
+  .error-message {
+    color: red;
+    font-size: 0.85em;
+    margin-top: 4px;
+    min-height: 18px; /* reserve space even if empty */
+  }
+  /* Optional: red border on invalid inputs */
+  .form-control.invalid {
+    border-color: red;
+  }
 
 
-  
+      button:disabled {
+      opacity: 0.5;
+      cursor: not-allowed;
+    }
